# PatchesPuzzleGenerator

./: .gitignore  LICENSE  README.md  generate_patches.py  pyproject.toml
.github/workflows/: ci.yml
src/patches_puzzle_creator/: __init__.py  generate_patches.py
